# rust-api

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: controller.rs  dto.rs  error.rs  main.rs  service.rs
entity/: Cargo.toml
entity/src/: cake.rs  cake_filling.rs  figure.rs  filling.rs  fruit.rs  lib.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230207_162659_one_to_one.rs  m20230208_123127_add_filling_try_2.rs  m20230208_131341_one_to_many.rs
