[package]
name = "fruits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration", "api"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
actix-api = { path = "api" }